[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/CheckButtons.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/GeneralButtons.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/go_back2.png" type="Texture" id=4]
[ext_resource path="res://Scripts/SettingsScreen.gd" type="Script" id=5]
[ext_resource path="res://Scenes/MusicGame.tscn" type="PackedScene" id=6]
[ext_resource path="res://Fonts/FredokaOne-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/audio_on4.png" type="Texture" id=8]
[ext_resource path="res://Assets/music_icon4.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.34902, 0.741176, 0.847059, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.282353, 0.294118, 0.968627, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=2]
size = 19
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="SettingsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnBack" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.5
margin_top = -290.0
margin_right = 60.5
margin_bottom = -250.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.898039, 0.0156863, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "BACK"
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicGame" parent="." instance=ExtResource( 6 )]

[node name="btnMusic" type="CheckBox" parent="."]
margin_left = 139.5
margin_top = 287.0
margin_right = 274.5
margin_bottom = 332.0
custom_fonts/font = SubResource( 3 )
text = "Music"
icon = ExtResource( 9 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnAudio" type="CheckBox" parent="."]
margin_left = 139.5
margin_top = 337.0
margin_right = 275.5
margin_bottom = 378.0
custom_fonts/font = SubResource( 4 )
text = "Audio"
icon = ExtResource( 8 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GeneralButtons" parent="." instance=ExtResource( 3 )]

[node name="CheckButtons" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="btnBack" to="." method="_on_btnBack_pressed"]
[connection signal="toggled" from="btnMusic" to="MusicGame" method="_on_btnMusic_toggled"]
[connection signal="toggled" from="btnAudio" to="." method="_on_btnAudio_toggled"]
